[package]
name = "gitea_raw_client"
version = "1.17.3"
authors = ["OpenAPI Generator team and contributors"]
description = "This documentation describes the Gitea API."
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.7", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
