[package]
name = "octopush_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octopush_infra = { path = "../octopush_infra" }
octopush_core = { path = "../octopush_core" }

eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.4.18", features = ["env"] }
