[package]
name = "octopush_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitea_client = { path = "../gitea_client" }

async-trait = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rand = "0.8.5"
hex = "0.4.3"
git2 = { version = "0.18.1", features = [
  "vendored-libgit2",
  "vendored-openssl",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
octocrab = { version = "0.33.3", features = ["futures-core", "futures-util"] }
